// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider renders primary and secondary labels 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 p {
  line-height: 1.467em;
  margin: 0;
}

.emotion-0 p:nth-of-type(1) {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 p:nth-of-type(2) {
  color: #8798ad;
}

.emotion-1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-radius: 7px;
  height: 4px;
  width: 100%;
  background-color: rgba(46,91,255,0.15);
  outline: none;
  -webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.6, 1);
  transition: opacity 300ms cubic-bezier(0.4, 0, 0.6, 1);
}

.emotion-1::-moz-range-progress {
  background-color: #2e5bff;
}

.emotion-1::-moz-range-thumb {
  border: solid 4px #2e5bff;
  border-radius: 50%;
  height: 8px;
  width: 8px;
  cursor: pointer;
}

.emotion-1::-webkit-slider-thumb {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border: solid 4px #2e5bff;
  border-radius: 50%;
  height: 16px;
  width: 16px;
  cursor: pointer;
}

.emotion-1:disabled {
  opacity: 0.3;
}

<div>
  <label
    data-testid="slider"
  >
    <div
      class="emotion-0"
    >
      <p
        data-testid="slider-primary"
      >
        You can't input the array without navigating the redundant GB alarm!
      </p>
      <p
        data-testid="slider-secondary"
      >
        You can't input the array without navigating the redundant GB alarm!
      </p>
    </div>
    <input
      class="emotion-1"
      data-testid="slider-input"
      type="range"
    />
  </label>
</div>
`;

exports[`Slider renders primary label 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 p {
  line-height: 1.467em;
  margin: 0;
}

.emotion-0 p:nth-of-type(1) {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 p:nth-of-type(2) {
  color: #8798ad;
}

.emotion-1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-radius: 7px;
  height: 4px;
  width: 100%;
  background-color: rgba(46,91,255,0.15);
  outline: none;
  -webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.6, 1);
  transition: opacity 300ms cubic-bezier(0.4, 0, 0.6, 1);
}

.emotion-1::-moz-range-progress {
  background-color: #2e5bff;
}

.emotion-1::-moz-range-thumb {
  border: solid 4px #2e5bff;
  border-radius: 50%;
  height: 8px;
  width: 8px;
  cursor: pointer;
}

.emotion-1::-webkit-slider-thumb {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border: solid 4px #2e5bff;
  border-radius: 50%;
  height: 16px;
  width: 16px;
  cursor: pointer;
}

.emotion-1:disabled {
  opacity: 0.3;
}

<div>
  <label
    data-testid="slider"
  >
    <div
      class="emotion-0"
    >
      <p
        data-testid="slider-primary"
      >
        The SMS program is down, synthesize the redundant feed so we can synthesize the SQL hard drive!
      </p>
    </div>
    <input
      class="emotion-1"
      data-testid="slider-input"
      type="range"
    />
  </label>
</div>
`;

exports[`Slider renders secondary label 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 p {
  line-height: 1.467em;
  margin: 0;
}

.emotion-0 p:nth-of-type(1) {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 p:nth-of-type(2) {
  color: #8798ad;
}

.emotion-1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-radius: 7px;
  height: 4px;
  width: 100%;
  background-color: rgba(46,91,255,0.15);
  outline: none;
  -webkit-transition: opacity 300ms cubic-bezier(0.4, 0, 0.6, 1);
  transition: opacity 300ms cubic-bezier(0.4, 0, 0.6, 1);
}

.emotion-1::-moz-range-progress {
  background-color: #2e5bff;
}

.emotion-1::-moz-range-thumb {
  border: solid 4px #2e5bff;
  border-radius: 50%;
  height: 8px;
  width: 8px;
  cursor: pointer;
}

.emotion-1::-webkit-slider-thumb {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border: solid 4px #2e5bff;
  border-radius: 50%;
  height: 16px;
  width: 16px;
  cursor: pointer;
}

.emotion-1:disabled {
  opacity: 0.3;
}

<div>
  <label
    data-testid="slider"
  >
    <div
      class="emotion-0"
    >
      <p
        data-testid="slider-secondary"
      >
        You can't quantify the interface without parsing the neural ADP feed!
      </p>
    </div>
    <input
      class="emotion-1"
      data-testid="slider-input"
      type="range"
    />
  </label>
</div>
`;
